ebnf.txt
// https://bnfplayground.pauliankline.com/
<fn> ::= "pub"? ("const" | "let") <ident> "=" "fn" "(" <args> ")" <ret_type> <block>
<fn_type> ::= "fn" "(" <type> ("," <type>)* ")" <ret_type>
<ret_type> "void" | <type>
<args> ::= (<self_arg> | <arg>) ("," <arg>)*
<self_arg> ::= "self" ":" (("*" | "&") | ("let" | "const"))?<type>
<arg> ::= <ident> (":" (("*" | "&") | ("let" | "const"))?<type>)?
<block> ::= "{" (<or> ";")* "}"
<or> ::= <and> ("||" <and>)*
<and> ::= <equality> ("&&" <equality>)*
<equality> ::= <cmp> (("!=" | "==") <cmp>)*
<cmp> ::= <low_bin> ((">" | ">=" | "<" | "<=") <low_bin>)*
<low_bin> ::= <high_bin> (("+" | "-") <high_bin>)*
<high_bin> ::= <unary> (("*" | "/") <unary>)*
<unary> ::= (("!" | "-") <unary>) | <terminal>
<terminal> ::= "true" | "false" | "undefined" | "self" | "never" | <num> | <ident>
<ident> ::= ([a-z] | [A-Z] | "_") ([A-Z] | [a-z] | [0-9] | "_")*
<num> ::= ([1-9] [0-9]* "."? ([0-9])+) | [0-9] "." [1-9]+ | [0-9]
<type> ::= ("num" | "any" | "{""}" | "[""]" | <ident> | <fn_type>) ("+" , <type>)*
